syntax = "proto3";

package cmd;

service DogoRPCExecuter {
  rpc FetchItems (FetchItemsRequest) returns (FetchItemsResponse) {}
  rpc StoreItem (StoreItemRequest) returns (StoreItemResponse) {}
}

message RPCItem {
  string name = 1;
  int64 flags = 2;
  uint64 expiration = 3;
  bytes value = 4;
}

message FetchItemsResponse {
  bool error = 1;
  string errormsg = 2;
  repeated RPCItem items = 3;
}

message FetchItemsRequest {
  enum ConsistencyLevel {
    NONE = 0;
    STRONG = 1;
  }
  ConsistencyLevel consistency_level = 1;
  repeated RPCItem items = 2;
}

message StoreItemResponse {
  bool error = 1;
  string errormsg = 2;
}

message StoreItemRequest {
  enum StorePolicy {
    INSERT_OR_UPDATE = 0;
    INSERT_IF_NOT_EXISTS = 1;
    UPDATE_IF_EXISTS = 2;
  }
  StorePolicy store_policy = 1;
  RPCItem item = 2;
}
